# 2025fy_ge70501_chap_final_report

./: .dockerignore  .gitignore  README.md  compose.yml  main.py  pyproject.toml
docker/runtime/: Dockerfile  entrypoint.sh
src/: database.py  evaluation.py  indexing.py  models.py  search.py
