[project]
name = "2025fy-ge70501-chap-final-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.11",
  "sqlalchemy>=2.0",
  "mecab-python3>=1.0",
  "unidic-lite>=1.0",
  "numpy>=2.3",
  "tqdm>=4.67",
]

[dependency-groups]
dev = [
  "mypy>=1.16",
  "types-tqdm>=4.67.0.20250516",
  "ruff>=0.12.0",
]
